--- a/testBenchGenerator/View/GeneratorView.xaml
+++ b/testBenchGenerator/View/GeneratorView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:testBenchGenerator.View"
              mc:Ignorable="d" 
-             d:DesignHeight="700" d:DesignWidth="1200" Background="White">
+             d:DesignHeight="900" d:DesignWidth="1400" Background="White" x:Name="genView">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -19,89 +19,163 @@
 
         <TextBlock Grid.Row="0" Grid.Column="0" Margin="100,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Text="Module under test source file"/>
 
-        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.ColumnSpan="2" Margin="20,0" VerticalAlignment="Stretch">
+        <StackPanel Orientation="Vertical" Grid.Row="1" Grid.ColumnSpan="2" Margin="20,0" HorizontalAlignment="Stretch">
+
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch">
+
+                <DockPanel>
+                    <Border DockPanel.Dock="Top" BorderThickness="1,1,0,0" BorderBrush="Black">
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="Clocks" FontWeight="Bold" Margin="10,5,0,5"/>
+                            <ListView x:Name="clocks" VerticalAlignment="Stretch" ItemsSource="{Binding Clocks}" BorderThickness="0">
+                                <ListView.View>
+                                    <GridView>
+                                        <GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding Name}"/>
+                                        <GridViewColumn Header="Frequency (MHz)" Width="100">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBox Text="{Binding Frequency, Mode=TwoWay}" Width="100" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                    </GridView>
+                                </ListView.View>
+                            </ListView>
+                        </StackPanel>
+                    </Border>
+                </DockPanel>
+
+                <DockPanel>
+                    <Border DockPanel.Dock="Top" BorderThickness="1,1,0,0" BorderBrush="Black">
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="Resets" FontWeight="Bold" Margin="10,5,0,5"/>
+                            <ListView x:Name="resets" VerticalAlignment="Stretch" ItemsSource="{Binding Resets}" BorderThickness="0">
+                                <ListView.View>
+                                    <GridView>
+                                        <GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding Name}"/>
+                                        <GridViewColumn Header="Polarization" Width="100">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBox Text="{Binding Polarization, Mode=TwoWay}" Width="100" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                    </GridView>
+                                </ListView.View>
+                            </ListView>
+                        </StackPanel>
+                    </Border>
+                </DockPanel>
+
+                <DockPanel>
+                    <Border DockPanel.Dock="Top" BorderThickness="1,1,1,0" BorderBrush="Black">
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="Parameters" FontWeight="Bold" Margin="10,5,0,5"/>
+                            <ListView x:Name="params" VerticalAlignment="Stretch" ItemsSource="{Binding Parameters}" BorderThickness="0">
+                                <ListView.View>
+                                    <GridView>
+                                        <GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding Name}"/>
+                                        <GridViewColumn Header="Value" Width="100">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBox Text="{Binding Value, Mode=TwoWay}" Width="100" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                    </GridView>
+                                </ListView.View>
+                            </ListView>
+                        </StackPanel>
+                    </Border>
+                </DockPanel>
+
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch">
+
+                <DockPanel>
+                    <Border DockPanel.Dock="Top" BorderThickness="1" BorderBrush="Black">
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="Data Inputs" FontWeight="Bold" Margin="10,5,0,5"/>
+                            <ListView x:Name="datains" VerticalAlignment="Stretch" ItemsSource="{Binding DataInputs}" BorderThickness="0" SelectedItem="{Binding SelectedDataIn}">
+                                <ListView.Resources>
+                                    <Style TargetType="ListViewItem">
+                                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                    </Style>
+                                </ListView.Resources>
+                                <ListView.View>
+                                    <GridView>
+                                        <GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding Name}"/>
+                                        <GridViewColumn Header="Clock sync" Width="200">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <ComboBox Width="180" ItemsSource="{Binding ElementName=genView, Path=DataContext.Clocks}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" SelectedItem="{Binding ElementName=genView, Path=DataContext.SelectedDataIn.ClockSync, Mode=OneWayToSource}"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn Header="Valid" Width="200">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <ComboBox Width="180" ItemsSource="{Binding ElementName=genView, Path=DataContext.DataInputs}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" SelectedItem="{Binding ElementName=genView, Path=DataContext.SelectedDataIn.ValidIn, Mode=OneWayToSource}"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn Header="Input pattern" Width="200">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBox Text="{Binding DataVector, Mode=TwoWay}" Width="200" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn Header="Valid sequence" Width="200" DisplayMemberBinding="{Binding VldSeq}"/>
+                                        <GridViewColumn Header="Output port" Width="150">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <ComboBox ItemsSource="{Binding ElementName=genView, Path=DataContext.Outputs}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" SelectedItem="{Binding ElementName=genView, Path=DataContext.SelectedDataIn.DataOut, Mode=OneWayToSource}"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn Header="Output valid port" Width="150">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <ComboBox Width="130" ItemsSource="{Binding ElementName=genView, Path=DataContext.Outputs}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" SelectedItem="{Binding ElementName=genView, Path=DataContext.SelectedDataIn.ValidOut, Mode=OneWayToSource}"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                    </GridView>
+                                </ListView.View>
+                            </ListView>
+                        </StackPanel>
+                    </Border>
+                </DockPanel>
+
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch">
+
+                <DockPanel>
+                    <Border DockPanel.Dock="Top" BorderThickness="1,0,1,1" BorderBrush="Black">
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="Test Cases" FontWeight="Bold" Margin="10,5,0,5"/>
+                            <ListView x:Name="tests" VerticalAlignment="Stretch" BorderThickness="0">
+                                <ListView.Resources>
+                                    <Style TargetType="ListViewItem">
+                                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                    </Style>
+                                </ListView.Resources>
+                                <ListView.View>
+                                    <GridView>
+                                        <GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding Name}"/>
+                                        
+                                    </GridView>
+                                </ListView.View>
+                            </ListView>
+                        </StackPanel>
+                    </Border>
+                </DockPanel>
+
+            </StackPanel>
             
-            <DockPanel>
-                <Border DockPanel.Dock="Top" BorderThickness="1,1,0,1" BorderBrush="Black">
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock Text="Clocks" FontWeight="Bold" Margin="10,5,0,5"/>
-                        <ListView x:Name="clocks" VerticalAlignment="Stretch" ItemsSource="{Binding Clocks}" BorderThickness="0">
-                            <ListView.View>
-                                <GridView>
-                                    <GridViewColumn Header="Name" Width="100" DisplayMemberBinding="{Binding Name}"/>
-                                    <GridViewColumn Header="Frequency (MHz)" Width="100">
-                                        <GridViewColumn.CellTemplate>
-                                            <DataTemplate>
-                                                <TextBox Text="{Binding Frequency, Mode=TwoWay}" Width="100" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0"/>
-                                            </DataTemplate>
-                                        </GridViewColumn.CellTemplate>
-                                    </GridViewColumn>
-                                </GridView>
-                            </ListView.View>
-                        </ListView>
-                    </StackPanel>
-                </Border>
-            </DockPanel>
-
-            <DockPanel>
-                <Border DockPanel.Dock="Top" BorderThickness="1,1,0,1" BorderBrush="Black">
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock Text="Resets" FontWeight="Bold" Margin="10,5,0,5"/>
-                        <ListView x:Name="resets" VerticalAlignment="Stretch" ItemsSource="{Binding Resets}" BorderThickness="0">
-                            <ListView.View>
-                                <GridView>
-                                    <GridViewColumn Header="Name" Width="100" DisplayMemberBinding="{Binding Name}"/>
-                                    <GridViewColumn Header="Polarization" Width="100">
-                                        <GridViewColumn.CellTemplate>
-                                            <DataTemplate>
-                                                <TextBox Text="{Binding Polarization, Mode=TwoWay}" Width="100" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0"/>
-                                            </DataTemplate>
-                                        </GridViewColumn.CellTemplate>
-                                    </GridViewColumn>
-                                </GridView>
-                            </ListView.View>
-                        </ListView>
-                    </StackPanel>
-                </Border>
-            </DockPanel>
-
-            <DockPanel>
-                <Border DockPanel.Dock="Top" BorderThickness="1" BorderBrush="Black">
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock Text="Data Inputs" FontWeight="Bold" Margin="10,5,0,5"/>
-                        <ListView x:Name="datains" VerticalAlignment="Stretch" ItemsSource="{Binding DataInputs}" BorderThickness="0">
-                            <ListView.View>
-                                <GridView>
-                                    <GridViewColumn Header="Name" Width="100" DisplayMemberBinding="{Binding Name}"/>
-                                    <GridViewColumn Header="Clock sync" Width="100">
-                                        <GridViewColumn.CellTemplate>
-                                            <DataTemplate>
-                                                <TextBox Text="{Binding ClockSync, Mode=TwoWay}" Width="100" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0"/>
-                                            </DataTemplate>
-                                        </GridViewColumn.CellTemplate>
-                                    </GridViewColumn>
-                                    <GridViewColumn Header="Valid" Width="100">
-                                        <GridViewColumn.CellTemplate>
-                                            <DataTemplate>
-                                                <TextBox Text="{Binding Valid, Mode=TwoWay}" Width="100" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0"/>
-                                            </DataTemplate>
-                                        </GridViewColumn.CellTemplate>
-                                    </GridViewColumn>
-                                    <GridViewColumn Header="Input pattern" Width="200">
-                                        <GridViewColumn.CellTemplate>
-                                            <DataTemplate>
-                                                <TextBox Text="{Binding DataVector, Mode=TwoWay}" Width="200" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0"/>
-                                            </DataTemplate>
-                                        </GridViewColumn.CellTemplate>
-                                    </GridViewColumn>
-                                    <GridViewColumn Header="Valid sequence" Width="200" DisplayMemberBinding="{Binding VldSeq}"/>
-                                </GridView>
-                            </ListView.View>
-                        </ListView>
-                    </StackPanel>
-                </Border>
-            </DockPanel>
-
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1" Margin="20">
